add_executable(SimpleCheckout SimpleCheckout.cpp)
target_link_libraries(SimpleCheckout tonioviz)

add_executable(GtsamExample GtsamExample.cpp)
target_link_libraries(GtsamExample tonioviz)

add_executable(MultiTrajectoryExample MultiTrajectoryExample.cpp)
target_link_libraries(MultiTrajectoryExample tonioviz)

add_executable(LandmarkExample LandmarkExample.cpp)
target_link_libraries(LandmarkExample tonioviz)
